--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-appdirs==1.4.3
-buildozer==0.39
-certifi==2018.11.29
-chardet==3.0.4
-colorama==0.4.1
-Cython==0.29.6
-docutils==0.14
-idna==2.8
-Jinja2==2.10
-Kivy==1.10.0
-Kivy-Garden==0.1.4
-MarkupSafe==1.1.1
-pexpect==4.6.0
-ptyprocess==0.6.0
-Pygments==2.3.1
-requests==2.21.0
-sh==1.12.4
-six==1.12.0
-urllib3==1.24.2
-virtualenv==16.4.3
+appdirs
+buildozer
+certifi
+chardet
+colorama
+Cython
+docutils
+idna
+Jinja2
+Kivy
+Kivy-Garden
+MarkupSafe
+pexpect
+ptyprocess
+Pygments
+requests
+sh
+six
+urllib3
+virtualenv
